<resources>
    <string name="app_name">Kmera</string>
	
    <!-- camera.xml -->
    <string name="take_picture">Capturar Foto</string>
    <string name="show_picture">Exibir Foto</string>
   
    <string name="take_video">Capturar Vídeo</string>
    <string name="show_video">Exibir Vídeo</string>
    
    <!-- main.xml -->
    <string name="camera">Câmera</string>
    <string name="media_player">Player</string>
    <string name="location">Localização</string>
    
    <!-- media_player.xml -->
    <string name="execute_music_from_file">Executar música do arquivo</string>
    <string name="execute_music_from_url">Executar música de URL</string>
    <string name="execute_video">Executar Vídeo</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="play">PLAY!</string>
    
    <!-- location.xml -->
    <string name="provider">Provider</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
</resources>
