<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="executeMusicFromFile"
        android:text="@string/execute_music_from_file" />
    
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="executeMusicFromUrl"
        android:text="@string/execute_music_from_url" />
    
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="executeMusicVideo"
        android:text="@string/execute_video" />
    
    <TableRow >
    
        <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="stop"
	        android:text="@string/stop" />
        
        <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="pause"
	        android:text="@string/pause" />
        
        <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="play"
	        android:text="@string/play" />
        
    </TableRow>
    

</LinearLayout>
